tests/fixtures/invalid/pow_bool_none_bytes.py
# Cannot call pow() with Bool, None, Bytes
x = pow(True, None, b"hello")
